--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,20 @@
-name: Deploy Static Site with Docker
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
-      - main  # أو أي فرع بتشتغل عليه
+      - main   # أو اسم الفرع الأساسي بتاعك
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build Docker image
-        run: docker build -t my-static-site .
-
-      - name: Run container (اختياري للاختبار فقط)
-        run: docker run -d -p 80:80 my-static-site
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./ 
